--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,11 @@
 							</div>
 							<div class="header__h-buttons">
 								<ul class="h-buttons">
+									<li class="h-buttons__item h-buttons__item-tablet">
+										<a href="#" class="h-buttons__link h-buttons__link-profile">
+											<svg xmlns="http://www.w3.org/2000/svg" width="28" height="29" fill="none" viewBox="0 0 28 29"><path fill="#606060" d="M27.635 26.891l-7.302-7.237c1.951-2.06 3.21-4.867 3.21-7.987C23.543 5.241 18.255 0 11.772 0 5.287 0 0 5.24 0 11.667s5.288 11.668 11.771 11.668c2.456 0 4.785-.749 6.673-2.06l7.428 7.363c1.133 1.123 2.896-.624 1.763-1.747zM2.455 11.667c0-5.053 4.155-9.171 9.254-9.171 5.099 0 9.253 4.118 9.253 9.171 0 5.054-4.154 9.172-9.253 9.172-5.1 0-9.254-4.118-9.254-9.172z"/></svg>
+										</a>
+									</li>
 									<li class="h-buttons__item">
 										<a href="#" class="h-buttons__link h-buttons__link-profile">
 											<svg xmlns="http://www.w3.org/2000/svg" width="25" height="31" viewBox="0 0 25 31"><path d="M17.694 14.977c1.848-1.602 2.985-3.97 2.985-6.478C20.678 3.83 16.982 0 12.364 0 7.816 0 4.12 3.831 4.12 8.499c0 2.577 1.137 4.946 2.985 6.478C2.842 17.067 0 21.665 0 26.752c0 1.044.142 2.09.355 3.134L.64 31h23.52l.285-1.115c.213-1.045.355-2.09.355-3.134 0-5.086-2.842-9.614-7.106-11.774zm4.122 13.236H2.913c-.07-.487-.07-.975-.07-1.393 0-4.667 2.913-8.708 7.034-9.892a1.87 1.87 0 0 0 .995-1.672c0-.627-.355-1.184-.852-1.532-.143-.07-.285-.14-.356-.21-.142-.07-.497-.348-.497-.348-1.35-1.045-2.203-2.717-2.203-4.597 0-3.135 2.416-5.713 5.4-5.713 2.985 0 5.472 2.578 5.472 5.713 0 1.81-.853 3.552-2.203 4.597 0 0-.355.279-.497.349-.142.07-.213.139-.355.209-.498.348-.853.905-.853 1.532 0 .697.426 1.324.995 1.672 4.121 1.184 7.035 5.225 7.035 9.892 0 .488-.071.906-.142 1.393z"/></svg>
@@ -77,6 +82,11 @@
 									<li class="h-buttons__item">
 										<a href="#" class="h-buttons__link h-buttons__link-basket">
 											<svg xmlns="http://www.w3.org/2000/svg" width="35" height="30" viewBox="0 0 35 30"><path d="M34.424 4.004a2.838 2.838 0 0 0-2.226-1.058H8.507c-.16 0-.318 0-.398.076l-.159-.454C7.553 1.133 6.042 0 4.452 0H0v3.022h4.452c.159 0 .398.226.477.302l.954 3.55 2.783 11.482C9.063 19.866 10.494 21 12.164 21h15.582c1.59 0 3.1-1.058 3.577-2.568L34.98 6.27c.08-.756-.079-1.662-.556-2.266zm-6.28 13.672c-.08.151-.319.378-.478.378H12.084c-.159 0-.318-.151-.397-.302L8.904 5.968h22.738l-3.499 11.708zM14.698 22.4a3.497 3.497 0 0 0-3.498 3.5 3.498 3.498 0 1 0 6.996 0c.092-1.934-1.473-3.5-3.498-3.5zM24.5 22.4a3.498 3.498 0 0 0-3.5 3.5c0 1.934 1.566 3.5 3.5 3.5s3.5-1.566 3.5-3.5-1.566-3.5-3.5-3.5z"/></svg>
+										</a>
+									</li>
+									<li class="h-buttons__item h-buttons__item-mob">
+										<a href="#" class="h-buttons__link h-buttons__link-basket">
+											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" fill="none" viewBox="0 0 16 15"><path fill="#DB3333" d="M0 1.5A1.5 1.5 0 0 1 1.5 0h13a1.5 1.5 0 0 1 0 3h-13A1.5 1.5 0 0 1 0 1.5zM0 7.5A1.5 1.5 0 0 1 1.5 6h13a1.5 1.5 0 0 1 0 3h-13A1.5 1.5 0 0 1 0 7.5zM0 13.5A1.5 1.5 0 0 1 1.5 12h13a1.5 1.5 0 0 1 0 3h-13A1.5 1.5 0 0 1 0 13.5z"/></svg>
 										</a>
 									</li>
 								</ul>
@@ -196,7 +206,7 @@
 			</div>
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-4">
+					<div class="col-lg-4 col-md-6">
 						<div class="page__p-questions">
 							<div class="p-questions" style="background-image: url(img/questions-bg-1.png);">
 								<h2 class="p-questions__title">
@@ -227,7 +237,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4">
+					<div class="col-lg-4 col-md-6">
 						<div class="page__p-questions">
 							<div class="p-questions" style="background-image: url(img/questions-bg-2.png);">
 								<h2 class="p-questions__title">
@@ -258,7 +268,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4">
+					<div class="col-lg-4 col-md-12">
 						<div class="page__p-redbaner">
 							<div class="p-redbaner">
 								<div class="p-redbaner__count">
@@ -272,7 +282,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="page__p-questions">
+						<div class="page__p-questions page__p-questions-last">
 							<div class="p-questions p-questions-last" style="background-image: url(img/questions-bg-3.png); background-position: right bottom;">
 								<h2 class="p-questions__title">
 									Решения для бизнеса
@@ -693,7 +703,73 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row visible-md">
+					<div class="col-12">
+						<div class="p-carousel3 owl-carousel">
+							<div class="p-carousel__item">
+								<div class="p-recipes">
+									<div class="p-recipes__top" style="background-image: url(img/recipes/1.png);"></div>
+									<p class="p-recipes__description">
+										Рецепт для приготовления очень сочного мяса с применением сушенного помидора и грузинских специй 
+									</p>
+									<a href="#" class="p-recipes__set">
+										Специи в наборе
+									</a>
+									<div class="p-recipes__bottom">
+										<span class="p-recipes__price">
+											160,00 грн.
+										</span>
+										<a href="#" class="p-recipes__btn">
+											<svg xmlns="http://www.w3.org/2000/svg" width="21" height="18" fill="none" viewBox="0 0 21 18"><path fill="#FFFFFF" d="M20.654 2.478a1.683 1.683 0 0 0-1.335-.654H5.104c-.095 0-.19 0-.239.046l-.095-.28C4.532.7 3.625 0 2.671 0H0v1.87h2.671c.096 0 .239.14.286.188l.573 2.197 1.67 7.108A2.183 2.183 0 0 0 7.297 13h9.35c.954 0 1.86-.655 2.146-1.59l2.194-7.529c.048-.467-.047-1.028-.334-1.403zm-3.768 8.464c-.048.094-.19.234-.286.234H7.25c-.095 0-.19-.093-.238-.187l-1.67-7.295h13.643l-2.099 7.248zM8.999 14A1.999 1.999 0 0 0 7 16a1.999 1.999 0 1 0 3.998 0c.052-1.105-.842-2-2-2zM15 14a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"/></svg>
+											Купить набор
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="p-carousel__item">
+								<div class="p-recipes">
+									<div class="p-recipes__top" style="background-image: url(img/recipes/2.png);"></div>
+									<p class="p-recipes__description">
+										Запеченное мясо с картофелем и пряными травами: розмарин, шафран, прованские травы
+									</p>
+									<a href="#" class="p-recipes__set">
+										Специи в наборе
+									</a>
+									<div class="p-recipes__bottom">
+										<span class="p-recipes__price">
+											450,00 грн.
+										</span>
+										<a href="#" class="p-recipes__btn">
+											<svg xmlns="http://www.w3.org/2000/svg" width="21" height="18" fill="none" viewBox="0 0 21 18"><path fill="#FFFFFF" d="M20.654 2.478a1.683 1.683 0 0 0-1.335-.654H5.104c-.095 0-.19 0-.239.046l-.095-.28C4.532.7 3.625 0 2.671 0H0v1.87h2.671c.096 0 .239.14.286.188l.573 2.197 1.67 7.108A2.183 2.183 0 0 0 7.297 13h9.35c.954 0 1.86-.655 2.146-1.59l2.194-7.529c.048-.467-.047-1.028-.334-1.403zm-3.768 8.464c-.048.094-.19.234-.286.234H7.25c-.095 0-.19-.093-.238-.187l-1.67-7.295h13.643l-2.099 7.248zM8.999 14A1.999 1.999 0 0 0 7 16a1.999 1.999 0 1 0 3.998 0c.052-1.105-.842-2-2-2zM15 14a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"/></svg>
+											Купить набор
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="p-carousel__item">
+								<div class="p-recipes">
+									<div class="p-recipes__top" style="background-image: url(img/recipes/3.png);"></div>
+									<p class="p-recipes__description">
+										Листовое печенье с набором ароматных пряностей: корица, имбирь, изюм и много других специй для уютных осенних вечеров
+									</p>
+									<a href="#" class="p-recipes__set">
+										Специи в наборе
+									</a>
+									<div class="p-recipes__bottom">
+										<span class="p-recipes__price">
+											160,00 грн.
+										</span>
+										<a href="#" class="p-recipes__btn">
+											<svg xmlns="http://www.w3.org/2000/svg" width="21" height="18" fill="none" viewBox="0 0 21 18"><path fill="#FFFFFF" d="M20.654 2.478a1.683 1.683 0 0 0-1.335-.654H5.104c-.095 0-.19 0-.239.046l-.095-.28C4.532.7 3.625 0 2.671 0H0v1.87h2.671c.096 0 .239.14.286.188l.573 2.197 1.67 7.108A2.183 2.183 0 0 0 7.297 13h9.35c.954 0 1.86-.655 2.146-1.59l2.194-7.529c.048-.467-.047-1.028-.334-1.403zm-3.768 8.464c-.048.094-.19.234-.286.234H7.25c-.095 0-.19-.093-.238-.187l-1.67-7.295h13.643l-2.099 7.248zM8.999 14A1.999 1.999 0 0 0 7 16a1.999 1.999 0 1 0 3.998 0c.052-1.105-.842-2-2-2zM15 14a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"/></svg>
+											Купить набор
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row hidden-md">
 					<div class="col-lg-4">
 						<div class="page__p-recipes">
 							<div class="p-recipes">
